# cabal

./: .travis.yml  appveyor.yml  travis-bootstrap.sh  travis-common.sh  travis-script.sh
Cabal/: Cabal.cabal
Cabal/Distribution/: Backpack.hs  InstalledPackageInfo.hs  ModuleShaping.hs  Package.hs  PackageDescription.hs
Cabal/Distribution/Backpack/: ComponentsGraph.hs  ConfiguredComponent.hs  ModuleScope.hs
Cabal/Distribution/PackageDescription/: Check.hs  Configuration.hs  Parse.hs
Cabal/Distribution/PackageDescription/Parsec/: FieldDescr.hs
Cabal/Distribution/Parsec/: Class.hs
Cabal/Distribution/Simple/: Build.hs  BuildTarget.hs  Configure.hs  GHC.hs  GHCJS.hs  Haddock.hs  InstallDirs.hs  JHC.hs  LHC.hs  LocalBuildInfo.hs  PackageIndex.hs  PreProcess.hs  Register.hs  Setup.hs  UHC.hs
Cabal/Distribution/Types/: BuildDependency.hs  BuildInfo.hs  DependencyMap.hs  LocalBuildInfo.hs
Cabal/Distribution/Utils/: Base62.hs  BinaryWithFingerprint.hs  LogProgress.hs  UnionFind.hs
Cabal/Language/Haskell/: Extension.hs
Cabal/doc/: developing-packages.rst
Cabal/tests/PackageTests/: PackageTester.hs  Tests.hs
Cabal/tests/PackageTests/Backpack/Includes3/: Includes3.cabal
Cabal/tests/PackageTests/Backpack/Includes3/sigs/Data/: Map.hsig
cabal-install/Distribution/Client/: ComponentDeps.hs  Dependency.hs  Install.hs  List.hs  SetupWrapper.hs  SrcDist.hs  Types.hs
cabal-testsuite/: PackageTests.hs  README.md  cabal-testsuite.cabal
cabal-testsuite/Test/Cabal/: Prelude.hs
travis/: README.md  upload.sh
travis/binaries/: .travis.yml  travis-test.sh
(+22 files in other folders)
