name:                Includes3
version:             0.1.0.0
license:             BSD3
author:              Edward Z. Yang
maintainer:          ezyang@cs.stanford.edu
build-type:          Simple
cabal-version:       >=1.23

library sigs
  build-depends:       base
  required-signatures: Data.Map
  hs-source-dirs:      sigs

library indef
  build-depends:       base, sigs
  exposed-modules:     Foo
  hs-source-dirs:      indef

executable exe
  build-depends:       base, containers, indef
  main-is:             Main.hs
  default-language:    Haskell2010
